apps/php/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app2
  name: app2-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
  type: NodePort
status:
  loadBalancer: {}
